--- a/src/main/resources/com/example/drawing/drawing-view.fxml
+++ b/src/main/resources/com/example/drawing/drawing-view.fxml
@@ -9,7 +9,7 @@
    <top>
       <HBox prefHeight="51.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <ChoiceBox fx:id="shapeList" prefWidth="150.0">
+            <ChoiceBox fx:id="shapeBoxList" prefWidth="150.0">
                <opaqueInsets>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </opaqueInsets>
@@ -44,6 +44,6 @@
       </HBox>
    </top>
    <center>
-      <Canvas fx:id="canvas" height="348.0" width="580.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvas" onMouseClicked="#canvasClicked" height="348.0" width="580.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
