--- a/src/main/resources/com/example/drawing/drawing-view.fxml
+++ b/src/main/resources/com/example/drawing/drawing-view.fxml
@@ -26,24 +26,38 @@
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding></ColorPicker>
-            <Button fx:id="undo" mnemonicParsing="false" text="Undo">
+            <TextField fx:id="shapeSize">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding></Button>
-            <Button fx:id="save" mnemonicParsing="false" text="Save">
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding></Button>
+               </padding>
+            </TextField>
          </children>
       </HBox>
    </top>
    <center>
-      <Canvas fx:id="canvas" onMouseClicked="#canvasClicked" height="348.0" width="580.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvas" height="1000.0" onMouseClicked="#canvasClicked" onMouseDragged="#draw" width="1000.0" BorderPane.alignment="CENTER" />
    </center>
+   <left>
+      <VBox prefHeight="345.0" prefWidth="60.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="undo" mnemonicParsing="false" text="Undo">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin></Button>
+            <Button fx:id="save" mnemonicParsing="false" text="Save">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin></Button>
+         </children>
+      </VBox>
+   </left>
 </BorderPane>
