--- a/src/main/resources/com/example/drawing/drawing-view.fxml
+++ b/src/main/resources/com/example/drawing/drawing-view.fxml
@@ -5,20 +5,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.drawing.Controller.DrawingController">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.drawing.Controller.DrawingController">
    <top>
       <HBox prefHeight="51.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <ChoiceBox fx:id="shapeBoxList" prefWidth="150.0">
-               <opaqueInsets>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </opaqueInsets>
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding></ChoiceBox>
             <ColorPicker fx:id="colorPicker">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -34,23 +24,58 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </TextField>
+            <Button fx:id="brushBtn" mnemonicParsing="false" onMouseDragged="#drawBrush" text="Brush">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding></Button>
+            <Button fx:id="rectBtn" mnemonicParsing="false" onMouseClicked="#drawStartRect" onMouseMoved="#drawShapeRect" onMouseReleased="#drawEndRect" text="Rectangle">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding></Button>
+            <Button fx:id="CircleBtn" mnemonicParsing="false" onMouseClicked="#drawStartCircle" onMouseMoved="#drawShapeCircle" onMouseReleased="#drawEndCile" text="Cirlce">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding></Button>
          </children>
       </HBox>
    </top>
    <center>
-      <Canvas fx:id="canvas" height="1000.0" onMouseClicked="#canvasClicked" onMouseDragged="#draw" width="1000.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvas" height="359.0" onMouseClicked="#canvasClicked" onMouseDragged="#draw" width="521.0" BorderPane.alignment="CENTER" />
    </center>
-   <left>
-      <VBox prefHeight="345.0" prefWidth="60.0" BorderPane.alignment="CENTER">
+   <right>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="undo" mnemonicParsing="false" text="Undo">
+            <Button fx:id="undo" mnemonicParsing="false" onMouseClicked="#undoButton" text="Undo">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
+            </Button>
+            <Button fx:id="zoomIn" mnemonicParsing="false" text="Zoom in">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin></Button>
-            <Button fx:id="save" mnemonicParsing="false" text="Save">
+               </VBox.margin>
+            </Button>
+            <Button fx:id="zoomOut" mnemonicParsing="false" text="Zoom out">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets top="5.0" />
+               </padding>
+            </Button>
+            <Button fx:id="save" mnemonicParsing="false" onMouseClicked="#rectDraw" text="Save">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
@@ -58,6 +83,12 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin></Button>
          </children>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </VBox>
-   </left>
+   </right>
 </BorderPane>
