--- a/src/main/resources/com/example/drawing/drawing-view.fxml
+++ b/src/main/resources/com/example/drawing/drawing-view.fxml
@@ -9,13 +9,14 @@
    <top>
       <HBox prefHeight="51.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <ColorPicker fx:id="colorPicker">
+            <ChoiceBox fx:id="choiceBox" prefWidth="150.0">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding></ColorPicker>
+               </padding>
+            </ChoiceBox>
             <TextField fx:id="shapeSize">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -24,37 +25,23 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </TextField>
-            <Button fx:id="brushBtn" mnemonicParsing="false" onMouseDragged="#drawBrush" text="Brush">
+            <ColorPicker fx:id="colorPicker">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding></Button>
-            <Button fx:id="rectBtn" mnemonicParsing="false" onMouseClicked="#drawStartRect" onMouseMoved="#drawShapeRect" onMouseReleased="#drawEndRect" text="Rectangle">
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding></Button>
-            <Button fx:id="CircleBtn" mnemonicParsing="false" onMouseClicked="#drawStartCircle" onMouseMoved="#drawShapeCircle" onMouseReleased="#drawEndCile" text="Cirlce">
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding></Button>
+               </padding></ColorPicker>
          </children>
       </HBox>
    </top>
    <center>
-      <Canvas fx:id="canvas" height="359.0" onMouseClicked="#canvasClicked" onMouseDragged="#draw" width="521.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvas" height="359.0" onMouseClicked="#canvasClicked" width="521.0" BorderPane.alignment="CENTER" />
    </center>
    <right>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="undo" mnemonicParsing="false" onMouseClicked="#undoButton" text="Undo">
+            <Button fx:id="undo" mnemonicParsing="false" text="Undo">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -75,7 +62,7 @@
                   <Insets top="5.0" />
                </padding>
             </Button>
-            <Button fx:id="save" mnemonicParsing="false" onMouseClicked="#rectDraw" text="Save">
+            <Button fx:id="save" mnemonicParsing="false"  text="Save">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
