--- a/src/main/resources/com/example/drawing/drawing-view.fxml
+++ b/src/main/resources/com/example/drawing/drawing-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity"  maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.drawing.Controller.DrawingController">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.drawing.Controller.DrawingController">
    <top>
       <HBox prefHeight="51.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -36,12 +36,12 @@
       </HBox>
    </top>
    <center>
-      <Canvas fx:id="canvas" height="359.0" onMouseDragged="#drawOnCanvas" onMouseClicked="#canvasClicked" width="521.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvas" height="359.0"  onMousePressed="#drawFirstCordination" onMouseReleased="#drawLastCordination" width="521.0" BorderPane.alignment="CENTER" />
    </center>
    <right>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="undo" onMouseClicked="#undoBtn" mnemonicParsing="false" text="Undo">
+            <Button fx:id="undo" mnemonicParsing="false" onMouseClicked="#undoBtn" text="Undo">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -62,7 +62,7 @@
                   <Insets top="5.0" />
                </padding>
             </Button>
-            <Button fx:id="save" mnemonicParsing="false"  text="Save">
+            <Button fx:id="save" mnemonicParsing="false" text="Save">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
