--- a/src/main/resources/com/example/drawing/drawing-view.fxml
+++ b/src/main/resources/com/example/drawing/drawing-view.fxml
@@ -7,16 +7,8 @@
 
 <BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.drawing.Controller.DrawingController">
    <top>
-      <HBox prefHeight="51.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <HBox fx:id="rectangle" prefHeight="51.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <ChoiceBox fx:id="choiceBox" prefWidth="150.0">
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-            </ChoiceBox>
             <TextField fx:id="shapeSize">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -32,14 +24,34 @@
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding></ColorPicker>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="lineButton" mnemonicParsing="false" onAction="#lineAction" onMouseClicked="#lineClicked" text="Line">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Button>
+                  <Button fx:id="rectButton" mnemonicParsing="false" onAction="#rectangleAction" onMouseClicked="#rectClicked" text="Rectangle">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </HBox>
    </top>
    <center>
-      <Canvas fx:id="canvas" height="359.0"  onMousePressed="#drawFirstCordination" onMouseReleased="#drawLastCordination" width="521.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvas" height="359.0" onMouseClicked="#canvasClicked" onMousePressed="#drawFirstCordination" onMouseReleased="#drawLastCordination" width="521.0" BorderPane.alignment="CENTER" />
    </center>
    <right>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="325.0" prefWidth="134.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="undo" mnemonicParsing="false" onMouseClicked="#undoBtn" text="Undo">
                <VBox.margin>
@@ -49,12 +61,12 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </Button>
-            <Button fx:id="zoomIn" mnemonicParsing="false" text="Zoom in">
+            <Button fx:id="zoomIn" mnemonicParsing="false" onMouseClicked="#zoomIn" text="Zoom in">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="zoomOut" mnemonicParsing="false" text="Zoom out">
+            <Button fx:id="zoomOut" mnemonicParsing="false" onMouseClicked="#zoomOut" text="Zoom out">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -62,13 +74,21 @@
                   <Insets top="5.0" />
                </padding>
             </Button>
-            <Button fx:id="save" mnemonicParsing="false" text="Save">
+            <Button fx:id="save" mnemonicParsing="false" onAction="#saveAction" text="Save">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin></Button>
+            <CheckBox fx:id="checkBox" mnemonicParsing="false" onAction="#deleteAll" prefHeight="27.0" prefWidth="123.0" text="Delete all">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </CheckBox>
          </children>
          <BorderPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
