--- a/src/main/resources/com/example/drawing/drawing-view.fxml
+++ b/src/main/resources/com/example/drawing/drawing-view.fxml
@@ -7,7 +7,7 @@
 
 <BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.drawing.Controller.DrawingController">
    <top>
-      <HBox fx:id="rectangle" prefHeight="51.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="51.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <TextField fx:id="shapeSize">
                <HBox.margin>
@@ -24,6 +24,17 @@
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding></ColorPicker>
+            <ColorPicker fx:id="secondColorPicker">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </ColorPicker>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Button fx:id="lineButton" mnemonicParsing="false" onAction="#lineAction" onMouseClicked="#lineClicked" text="Line">
@@ -48,7 +59,7 @@
       </HBox>
    </top>
    <center>
-      <Canvas fx:id="canvas" height="359.0" onMouseClicked="#canvasClicked" onMousePressed="#drawFirstCordination" onMouseReleased="#drawLastCordination" width="521.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvas" height="358.0" width="485.0" BorderPane.alignment="CENTER" />
    </center>
    <right>
       <VBox prefHeight="325.0" prefWidth="134.0" BorderPane.alignment="CENTER">
@@ -61,12 +72,12 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </Button>
-            <Button fx:id="zoomIn" mnemonicParsing="false" onMouseClicked="#zoomIn" text="Zoom in">
+            <Button fx:id="zoomIn" mnemonicParsing="false" onAction="#zoomInAction" onMouseClicked="#zoomIn" text="Zoom in">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="zoomOut" mnemonicParsing="false" onMouseClicked="#zoomOut" text="Zoom out">
+            <Button fx:id="zoomOut" mnemonicParsing="false" onAction="#zoomOutAction" onMouseClicked="#zoomOut" text="Zoom out">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -74,7 +85,7 @@
                   <Insets top="5.0" />
                </padding>
             </Button>
-            <Button fx:id="save" mnemonicParsing="false" onAction="#saveAction" text="Save">
+            <Button fx:id="save" mnemonicParsing="false" onAction="#saveAction" onMouseClicked="#saveClick" text="Save">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
