--- a/src/main/resources/com/example/drawing/drawing-view.fxml
+++ b/src/main/resources/com/example/drawing/drawing-view.fxml
@@ -72,19 +72,6 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </Button>
-            <Button fx:id="zoomIn" mnemonicParsing="false" onAction="#zoomInAction" onMouseClicked="#zoomIn" text="Zoom in">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </Button>
-            <Button fx:id="zoomOut" mnemonicParsing="false" onAction="#zoomOutAction" onMouseClicked="#zoomOut" text="Zoom out">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets top="5.0" />
-               </padding>
-            </Button>
             <Button fx:id="save" mnemonicParsing="false" onAction="#saveAction" onMouseClicked="#saveClick" text="Save">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -102,7 +89,7 @@
             </CheckBox>
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Button fx:id="selectBtn" mnemonicParsing="false" onAction="#selectOnAction" text="Select">
+                  <Button fx:id="selectShapeBtn" mnemonicParsing="false" onAction="#selectShapeOnAction" text=" Select Shape">
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
