--- a/src/main/resources/com/example/drawing/drawing-view.fxml
+++ b/src/main/resources/com/example/drawing/drawing-view.fxml
@@ -8,7 +8,6 @@
 <BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.drawing.Controller.DrawingController">
    <top>
       <HBox prefHeight="51.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
             <ChoiceBox fx:id="choiceBox" onMouseClicked="#choiceBoxClicked" prefWidth="150.0">
                <opaqueInsets>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -19,7 +18,7 @@
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding></ChoiceBox>
-            <TextField fx:id="shapeSize">
+            <TextField fx:id="shapeSize" promptText="size">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
@@ -27,7 +26,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </TextField>
-            <ColorPicker fx:id="colorPicker">
+            <ColorPicker fx:id="colorPicker" promptText="color">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
@@ -35,7 +34,6 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding></ColorPicker>
             <HBox prefHeight="100.0" prefWidth="200.0" />
-         </children>
       </HBox>
    </top>
    <center>
@@ -43,7 +41,6 @@
    </center>
    <right>
       <VBox prefHeight="325.0" prefWidth="134.0" BorderPane.alignment="CENTER">
-         <children>
             <Button fx:id="undo" mnemonicParsing="false" onMouseClicked="#undoBtn" text="Undo">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -68,7 +65,6 @@
                </padding>
             </CheckBox>
             <VBox prefHeight="200.0" prefWidth="100.0">
-               <children>
                   <CheckBox fx:id="changeShape" mnemonicParsing="false" onAction="#changeShapeAction" text="CheckBox">
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -77,9 +73,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                   </CheckBox>
-               </children>
             </VBox>
-         </children>
          <BorderPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </BorderPane.margin>
